# kin-model

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  deny.toml  downstream-pins.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  kin-dependency-wave.yml  registry-publish.yml  sast.yml
.kin-release/: downstreams.json
examples/: generate_schemas.rs
scripts/: check-downstream-pins.sh  check-version-bump.sh  publish-kinlab-crates.sh  registry-consumer-smoke.sh
src/: branch.rs  change.rs  conflict.rs  context.rs  contract.rs  entity.rs  error.rs  evidence.rs  federation.rs  graph.rs  ids.rs  layout.rs  lib.rs  preset.rs  projection.rs  provenance.rs  relation.rs  retrieval.rs  review.rs  session.rs  spec.rs  stats.rs  temporal.rs  timestamp.rs  verification.rs  work.rs
